* VampireApi 0.11.0
  - java.io.File.isAbsolute
  - java.io.File.isHidden
  - java.lang.System.Logger.Level
  - java.lang.reflect.UndeclaredThrowableException
  - java.lang.reflect.GenericSignatureFormatException
  - java.net.ContentHandlerFactory
  - java.net.ContentHandler
  - java.net.CookiePolicy in parts
  - java.net.CookieStore
  - java.lang.ref.Cleaner.Cleanable
  - java.lang.ref.PhantomReference
  - java.lang.EnumConstantNotPresentException
  - java.lang.LayerInstantiationException
  - java.lang.ReflextiveOperationException
  - java.lang.BootStrapMethodError
  - java.lang.ExceptionInInitializerError
  - java.lang.IllegalAccessError
  - java.lang.annotation.AnnotationTypeMismatchException
  - java.lang.annotation.IncompleteAnnotationException
  - java.lang.annotation.AnnotationFormatError
  - java.util.Optional
  - java.lang.constant.Constable
  - java.lang.Enum
  - java.util.Comparator do not declare equals in extension to java.lang Object
  - some skeleton classes in javax.script for compile a java ported programm 
* VampireApi 0.10.0
  - outsource 3rd party types
  - some litte Java 15 extensions from release notes
  - litte more refactoring
  - java.io.UncheckedIOException
  - java.net.spi.*
  - java.net.UnknownServiceException
  - java.net.SocketTimeoutException
  - java.net.ProtocolException
  - java.net.PortUnreachableException
  - java.net.NoRouteToHostException
  - java.net.HttpRetryException
  - java.net.ConnectException
  - java.lang.SystemJ.setProperty
  - java.lang.SecurityManager.checkPropertiesAccess
  + BugFixes:
    - java.util.Properties.load() 
* VampireApi 0.9.1
  - renamed
  - build on .net core platform with nuget using 
  - javax.xml.crypto package
  - java.lang package extended
  + java.io.PrintStream
    - print(char)
    - println(char)
  + BugFixes:
    - JavaExtensions.getClass()
    - Runtime.getRuntime.exec()
* JavApi 0.8.0.1
  - platform depended classes extracted
  + BugFixes: